Changed site-wide font to pixel size 12. Corrected any divs or areas that resulted in overflow. Changed font-size of RSSInclude box, removed padding from feed box to better align it with the other landing page div tops but it's not perfect. User-end appears to be clean, admin end appeared to bear no affect from the change.

--- a/public/stylesheets/sass/screen.scss
+++ b/public/stylesheets/sass/screen.scss
@@ -97,7 +97,7 @@ body {
   padding: 0px;
   color: #000000;
   text-align: center;
-  font-size: 11px;
+  font-size: 12px;
   line-height: 120%;
   background-color: #CCEFFE; }
 
@@ -810,7 +810,7 @@ body {
   -webkit-border-radius: 10px;
   -moz-border-radius: 10px;
   width: 415px;
-  height: 250px;
+  height: 285px;
   float: right;
   text-align: left;
   background-color: #ffffff;
@@ -820,14 +820,14 @@ body {
   width: 330px;
   float: left;
   text-align: left;
-  height: 240px;
+  height: 280px;
   border-right: 3px solid #662d91;
   margin: 0px 40px 0 10px;
   padding: 0px 40px 0 0; }
 
 #financial_center {
   width: 330px;
-  height: 240px;
+  height: 280px;
   float: left;
   text-align: left;
   margin: 0;
@@ -851,7 +851,7 @@ body {
 
 #about_us {
   width: 390px;
-  height: 260px;
+  height: 268px;
   background-color: #ffffff;
   padding: 10px;
   margin: 0 0 20px 0;
@@ -879,8 +879,8 @@ body {
   -moz-border-radius: 4px; }
 
 #about_right {
-  width: 380px;
-  height: 440px;
+  width: 385px;
+  height: 448px;
   float: right;
   text-align: left;
   margin: 0 0 20px 0;
@@ -897,17 +897,26 @@ body {
   float: left;
   text-align: left;
   min-height: 150px;
-  max-height: 537px;
+  max-height: 600px;
   border-right: 3px solid #662d91;
   margin: 20px 0 0 30px;
   padding: 0 20px 0 0; }
+  
+#recent_press_about {
+  overflow: visible;
+  width: 230px;
+  float: left;
+  min-height: 150px;
+  max-height: 600px;
+  margin: 10px 0 0 30px;
+  padding: 0 0 0 0; }
 
 #contact_us {
   width: 230px;
   float: left;
   text-align: left;
-  min-height: 537px;
-  max-height: 537px;
+  min-height: 600px;
+  max-height: 600px;
   border-right: 3px solid #662d91;
   margin: 20px 0 0 0;
   padding: 0 20px 0 0;
